--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         <activity android:name=".getReady"></activity>
         <activity android:name=".Transportation" />
         <activity android:name=".WelcomePage" />
+        <activity android:name=".AlarmsList" />
         <activity
             android:name=".ui.login.LoginActivity"
             android:label="@string/title_activity_login" />
